--- a/src/css/cv-template.css
+++ b/src/css/cv-template.css
@@ -21,6 +21,7 @@ body {
 
 main {
     width: 1000px;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,7 +32,6 @@ main {
     height: 297mm;
     width: 210mm;
     padding: 1.91cm 2.54cm;
-    margin: 2rem;
     border: groove 2px rgba(0, 0, 0, .2);
 }
 
