Add style to save PDF button

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -24,6 +24,10 @@ button {
     cursor: pointer;
 }
 
+.download-btn {
+    margin-top: 20px;
+}
+
 .insert {
     display: flex;
     flex-direction: column;
